applying header style

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -26,7 +26,7 @@
   text-align: center;
   font-size: 5ex;
   font-family: "Playfair Display", serif;
-  margin-top: 5rem;
+  padding: 5rem 0rem 0rem 0rem;
 }
 
 .changing-text {
