--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
   background-color: #151226;
-  background-size: cover;
+  /* background-size: cover; */
   color: white;
+}
+body {
+  background-color: #151226;
 }
