completing the project page

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -108,11 +108,12 @@
 @media screen and (max-width: 600px) {
   .about-me {
     text-align: center;
+    padding: 0em 0em 0em 0em;
   }
 
   .sub-text {
     font-family: "Cormorant Garamond", serif;
-    font-size: 2vw;
+    font-size: 1.5em;
   }
 }
 
