--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -62,7 +62,6 @@
   color: #eceff1;
   letter-spacing: 1px;
   font-weight: 300;
-  padding-left: 20px;
   font-size: 14px;
 }
 #proj1 .proj_info {
@@ -70,7 +69,7 @@
   bottom: 5%;
   left: -2.5%;
   opacity: 0.8;
-  background-color: #1982c8;
+  background-color: #0099ff;
   padding: 5%;
   width: 70%;
   height: 80%;
@@ -98,7 +97,7 @@
   opacity: 0;
 }
 #proj1:hover .proj_info {
-  opacity: 0.8;
+  opacity: 0.95;
 }
 
 .project-link {
@@ -146,4 +145,13 @@
     height: 15%;
     width: 200px;
   }
+}
+
+.project-list {
+  padding: 0.5em;
+}
+
+.project-back-img {
+  max-width: 100%;
+  max-height: 100%;
 }
