--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -26,7 +26,7 @@
 #proj1 .proj_title {
   width: 300px;
   height: 25%;
-  background-color: #1982c8;
+  background-color: #c300ff;
   z-index: 2;
   position: absolute;
   right: -15px;
@@ -46,7 +46,9 @@
 #proj1 .proj_desc {
   width: 250px;
   height: 10%;
-  background-color: #00b686;
+  border: 1em;
+  border-color: #b718ed;
+  background-color: #130b45;
   z-index: 2;
   position: absolute;
   right: -15px;
@@ -69,7 +71,7 @@
   bottom: 5%;
   left: -2.5%;
   opacity: 0.8;
-  background-color: #0099ff;
+  background-color: #130b45;
   padding: 5%;
   width: 70%;
   height: 80%;
@@ -97,11 +99,12 @@
   opacity: 0;
 }
 #proj1:hover .proj_info {
-  opacity: 0.95;
+  opacity: 1;
 }
 
 .project-link {
-  color: black;
+  color: white;
+  text-decoration: underline;
 }
 
 .font-style-header-project {
